# pasteforward

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: agent-usage.md  architecture.md  contracts.md  onboarding.md  release.md  security.md
media/remotion/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
media/remotion/src/: PasteForwardDemo.tsx  Root.tsx
scripts/: check-supply-chain.sh  package-release.sh  test-fanout.sh  test-lima-wayland.sh  test-lima-x11.sh  test-release-tarball.sh  test-service-lifecycle.sh  test-ttl-cleanup.sh
src/: clipboard.rs  command.rs  config.rs  daemon.rs  doctor.rs  error.rs  history.rs  lib.rs  main.rs  service.rs  state.rs
