[package]
name = "pasteforward"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Make image paste work in Claude Code and Codex over SSH."
repository = "https://github.com/acartag7/pasteforward"
rust-version = "1.85"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
